# turboIDE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRD-PARTY-NOTICES
.github/workflows/: cmake.yml
doc/: turbo.1  turboIDE.1
docs/: plan_git_integration.md  plan_language_server.md  plan_lua_scripting.md  scintilla_version.md
include/turbo/: basicwindow.h  editor.h  editstates.h  filewatcher.h  lexelixir.h  lexts.h  process.h  pty.h  scintilla.h  styles.h
include/turbo/dap/: client.h  jsonrpc.h
include/turbo/lsp/: client.h  jsonrpc.h  process.h
include/turbo/mcp/: bridge.h  ndjson.h  transport.h
include/turbo/scintilla/: internals.h  tscintilla.h
source/turbo/: agentconfig.cc  agentconfig.h  app.cc  app.h  buildconfig.cc  buildconfig.h  builddialog.cc  builddialog.h  cmds.h  colordialog.cc  colordialog.h  commandpalette.cc  commandpalette.h  commandrunner.cc  commandrunner.h  dapmanager.cc  dapmanager.h  debugconfig.cc  debugconfig.h  debugdialog.cc  debugdialog.h  debugpanels.cc  debugpanels.h  doctree.cc  doctree.h  editwindow.cc  editwindow.h  frecency.cc  frecency.h  fuzzymatch.cc  fuzzymatch.h  fuzzypicker.cc  fuzzypicker.h  gitclient.cc  gitclient.h  gitdialog.cc  gitdialog.h  gitmanager.cc  gitmanager.h  gotoanything.cc  (+25 more)
source/turbo-core/: basicwindow.cc  editor.cc  editstates.cc  filewatcher.cc  leftmargin.cc  process.cc  pty.cc  scintilla.cc  styles.cc  tscintilla.cc
source/turbo-core/dap/: client.cc  jsonrpc.cc
source/turbo-core/lexers/: LexElixir.cxx  TSLexer.cxx  TSQueries.cxx.in  TurboLexers.cxx
source/turbo-core/lsp/: client.cc  jsonrpc.cc  process.cc
source/turbo-core/mcp/: bridge.cc  transport.cc
source/turbo-core/platform/: font.cc  listbox.cc  menu.cc  platform.cc  surface.cc  surface.h  window.cc
